--- a/cards/cards.html
+++ b/cards/cards.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cards</title>
-    <link rel="stylesheet" href="cardsstyle.css"
+    <link rel="stylesheet" href="stylesheet.css"
 </head>
 <body>
     <div id="main">
